# VkPlayground

./: .gitmodules  CMakeLists.txt  compile_shaders
include/: application.hpp  callbacks.hpp  shader.hpp  util.hpp
resources/shaders/: triangle.frag  triangle.vert
resources/shaders/compiled/: triangle_frag.spv  triangle_vert.spv
src/: application.cpp  main.cpp  shader.cpp
